@@ -1,3 +1,9 @@
+2005-06-16  Yves Combe  <yves@ycombe.net>
+
+	* Preparation of cairo integration (compilation errors)
+	* --reread-xml option to force database boards rewrite.
+	    Suppress boards if they are no more in the xml list.
+
 2005-06-15  Yves Combe  <yves@ycombe.net>
 
 	* Change billard to football (NTBF suggestion).
